--- a/css/flappy.css
+++ b/css/flappy.css
@@ -12,4 +12,11 @@
     width: 1200px;
     margin: 15px;
     background-color:deepskyblue;
+    overflow: hidden;
+}
+.passaro{
+    position: absolute;
+    width: 60px;
+    left: calc(50% - 30px);
+    bottom: 50%;
 }
