--- a/css/flappy.css
+++ b/css/flappy.css
@@ -39,3 +39,7 @@
     background: linear-gradient (90deg, #639301, #A5E82E);
     border: 2px solid #000;
 }
+.barreira .corpo{
+    height: 40px;
+    width: 110px;
+}
