--- a/css/flappy.css
+++ b/css/flappy.css
@@ -5,7 +5,7 @@
     font-family: 'pixel';
     src: src('../fonts/Pixel.tff')
 }
-[wm-flappy]{
+[wm-flappy] {
     position: relative;
     border: 5px solid dodgerblue;
     height: 700px;
@@ -43,4 +43,13 @@
     height: 40px;
     width: 110px;
     background: linear-gradient (90deg, #639301, #A5E82E);
+    border-left:2px solid #000;
+    border-right: 2px solid #000;
+}
+.progresso{
+position: absolute;
+top: 10px;
+right: 10px;
+font-family: Pixel;
+font-size: 70px;
 }
